@@ -12,6 +12,7 @@ ufsutils (8.2-4) UNRELEASED; urgency=low
   * Remove packaging history from debian/copyright.
   * Switch to the libbsd-overlay.
     - Remove sys/endian.h local header now provided by libbsd.
+  * Add install and install-indep targets for consistency.
 
  -- Robert Millan <rmh@debian.org>  Thu, 08 Dec 2011 13:40:32 +0100
 
